--- a/Collection_2016/2016.6-兴趣班.md
+++ b/Collection_2016/2016.6-兴趣班.md
@@ -1,4 +1,15 @@
 #兴趣班应该回归到兴趣发展的本原了
 
-湖北的徐女士为了让现年8岁的儿子赢在起跑线上，半岁起开始培优教育，自2013年起狂砸12万元报了17项培优班。可是结果有点事与愿违，孩子虽然在幼儿园期间成为“学霸”，在小学一年级期间成绩也能保持班级前三，但到了二年已经落到班级中等水平，而且还有向下趋势。
+湖北的徐女士为了让现年8岁的儿子赢在起跑线上，半岁起开始培优教育，自2013年起狂砸12万元报了17项培优班。可是结果有点事与愿违，孩子虽然在幼儿园期间成为“学霸”，在小学一年级期间成绩也能保持班级前三，但到了二年已经落到班级中等水平，而且还有向下趋势。看罢此新闻，为父母望子成龙之心动容，也为这一结果唏嘘，更多的，则是在当前儿童兴趣班热下的思考。
 
+开办兴趣班初衷挺好，顾及学校规模化的班级授课制无法覆盖的儿童兴趣与专长发展，既符合全面发展的教育理念，也应和多元智能与多样化发展的理论主张。但放眼现在的儿童兴趣班开设情况来看，虽有兴趣培养、专长发展的好项目，却也不乏假兴趣之名做拔苗助长之实的混珠鱼目。而不少家长往往也是出于让孩子在升学等问题上保持相对于同龄人的优势报班，并以此裹挟其他家长加入此中，或者由于工作忙碌等原因以兴趣班弥补家庭教育与亲子互动的欠缺。
+
+在优质教育资源还无法满足所有人以及成年人工作时限等客观因素存在的情况下，单纯地批判这样的行为没有任何的意义，可取的做法还是给予家长适度的引导。关于儿童报读兴趣班的问题上，笔者的观点是：
+
+首先，报读兴趣班的内容要考虑与适合儿童的发展规律。瑞士心理学家皮亚杰早年提出的认知发展阶段理论（之后他也提出过儿童道德认知的发展阶段理论）可作为这方面的参考。他认为儿童的发展依据年龄的不同，可以分为以动作适应环境的感知运动阶段（0-2岁），主要依赖表象思维的前运算阶段（2-6岁），以运算图式为特征的具体运算阶段（6、7岁-11、12岁），以及初具形成抽象思维的形式运算阶段（11、12岁以后）。如果违逆发展阶段，超前学习，虽然出于取悦或是威摄于父母的原因，儿童也会努力学习，但要说效果终究大打折扣，如果因此而失却了对于学习的天然动机和兴趣，及至习得性无助，更是得不偿失。
+
+其次，从多元智能理论视角来看，不同儿童其能力的发展水平以及后续的发展潜力本身也是不均衡的，这也就是所谓的天赋之说。对于家长而言，不推荐跟风盲从，有句俗语叫“彼之良药、吾之砒霜”，在兴趣班选择的问题虽然不会严重至此，但是无视儿童自身的专长和兴趣，仅仅因为其同学在学什么而跟风，无异于培养猎豹爬树去和金丝猴竞争，相形之下，发现、挖掘猎豹的速度天赋针对性地加以指导更为可取。
+
+第三，都说父母是最好的教师，从这个角度来说，也要尽可能在日常生活中融入教育，言规身范，一方面将家庭教育作为学校教育甚至兴趣班学习的填塞剂，另一方面也得以亲子互动的方式，在日常的活动中发现、探知儿童的真正兴趣。学习是一场持续终生的马拉松，决定最终成绩的往往是孩子对于学习的动机、兴趣与信心，家长也有义务尽力做好教练的角色，做孩子发展路上的陪伴者、引领者和激励者。
+
+总之，在儿童兴趣班的问题上，要遵循发展规律、尊重个别差异，家长的作用往往比兴趣班更大。从这个意义来说，兴趣班最好还是回归到发展兴趣、扶持专长的本旨意义上，无视儿童成长规律，是拔苗助长，如果以折损儿童的学习动机和信心作为代价，则是涸泽而渔了。
