--- a/Collection_2016/2016.8_digital_citizenship_education.md
+++ b/Collection_2016/2016.8_digital_citizenship_education.md
@@ -39,20 +39,21 @@ ade and secure sites for me to use.
 9. I will help my parents understand how to have fun and learn things online and teach them things about the Internet, computers and other technology. 
 
 #### 中译
-[Common Sense的Digital Citizenship Education教材：](https://www.commonsensemedia.org/educators/digital-citizenship)
-[一个关于数字公民素养的文摘汇总](http://learntech.ties.k12.mn.us/Digital_Citizenship.html)
-[印弟安那州数字公民素养证书介绍页](http://www.doe.in.gov/elearning/digital-citizenship/digital-citizenship-certification)
-[Common Sense Education数字公民课程](https://www.commonsensemedia.org/educators/online-courses) service@ilester.net/ A$8
-[印弟安那州数字公民教育介绍](http://www.doe.in.gov/elearning/digital-citizenship/digital-citizenship)
-[INeLearn Book Club: Digital Citizenship: A Community-Based Approach (link is external)](elearningbookclub.blogspot.com/2016/04/book-club-announcements.html)
-[Indiana Digital Citizenship Community of Practice (link is external)](https://plus.google.com/u/0/communities/101578415004205884991)
-[为什么数字公民素养如此重要](http://www.itworx.education/digital-citizenship-important/)
-[数字公民素养专题网站资源页](http://www.digitalcitizenship.net/Resources.html)
-[洛杉矶](http://www.lacoe.edu/Technology/DigitalCitizenship.aspx)
-[The Strategy for Digital Citizenship](http://www.nais.org/Magazines-Newsletters/ISMagazine/Pages/The-Strategy-for-Digital-Citizenship.aspx)
-[Essential elements of digital citizenship](https://www.iste.org/explore/articleDetail?articleid=101&category=ISTE-Connects-blog&article=Essential-elements-of-digital-citizenship)
 
-[Lynda数字公民课程](https://www.lynda.com/Classroom-Management-tutorials/Digital-Citizenship/440956-2.html)
+* [Common Sense的Digital Citizenship Education教材：](https://www.commonsensemedia.org/educators/digital-citizenship)
+* [一个关于数字公民素养的文摘汇总](http://learntech.ties.k12.mn.us/Digital_Citizenship.html)
+* [印弟安那州数字公民素养证书介绍页](http://www.doe.in.gov/elearning/digital-citizenship/digital-citizenship-certification)
+* [Common Sense Education数字公民课程](https://www.commonsensemedia.org/educators/online-courses) service@ilester.net/ A$8
+* [印弟安那州数字公民教育介绍](http://www.doe.in.gov/elearning/digital-citizenship/digital-citizenship)
+* [INeLearn Book Club: Digital Citizenship: A Community-Based Approach (link is external)](elearningbookclub.blogspot.com/2016/04/book-club-announcements.html)
+* [Indiana Digital Citizenship Community of Practice (link is external)](https://plus.google.com/u/0/communities/101578415004205884991)
+* [为什么数字公民素养如此重要](http://www.itworx.education/digital-citizenship-important/)
+* [数字公民素养专题网站资源页](http://www.digitalcitizenship.net/Resources.html)
+* [洛杉矶](http://www.lacoe.edu/Technology/DigitalCitizenship.aspx)
+* [The Strategy for Digital Citizenship](http://www.nais.org/Magazines-Newsletters/ISMagazine/Pages/The-Strategy-for-Digital-Citizenship.aspx)
+* [Essential elements of digital citizenship](https://www.iste.org/explore/articleDetail?articleid=101&category=ISTE-Connects-blog&article=Essential-elements-of-digital-citizenship)
+
+* [Lynda数字公民课程](https://www.lynda.com/Classroom-Management-tutorials/Digital-Citizenship/440956-2.html)
 
 iNACOL在线学习标准：
 http://www.inacol.org/resources/resource-search/?resource_topics=16
