--- a/Collection_2016/2016.8_digital_citizenship_education.md
+++ b/Collection_2016/2016.8_digital_citizenship_education.md
@@ -2,18 +2,6 @@
 ### 父母契约
 [Digital Citizenship网站中父母协议](http://digitalcitizenship.net/uploads/ParentContract.pdf)
 
-1. I will get to know the services and Web sites my child uses. If  I don’t know how to use them, I will take the time to learn how.
-2. I will teach my children to understand that other people do not have the same access to technology. I will demonstrate to my child that all technology users should be treated the same.
-3. I will work with my child to understand the issues around online purchases. I will show my child which sites are safe and secure for 
-buying goods online. I will also help to explain how to search and find the best deals online.  
-4. I promise to teach my child when and how to use digital communication methods. I understand that technology may not always be the best way to interact with others.
-5. I will help everyone in our family to understand that our technology usage affects others. I will help my child to understand they need to act the way they want to be treated.
-6. I will try to get to know my child’s “online friends” just as I try get to know his or her other friends. I will explain that to have rights online there are certain responsibilities as well.
-7. I will teach my children that there are some material that is available online that is protected and cannot be taken without permission. Children need to understand that this material is owned by others and they have rights to be protected.
-8. I will explain to my children when using technology they need to be at proper heights for their size to keep from causing physical harm. I will also make sure that my children have limits on the time they can use technology as not to become addicted to the technology.
-9. I will spend time to teach my child to protect their technology and data by having adequate virus, spyware and adware software. I will also show that that having protection is important for all technology.
-
-#### 中译
 1. 我会去了解我孩子使用的网络服务和站点，如果我不知道如何使用，我会花时间去学习。
 2. 我会告诉孩子并不是所有人都有同样使用技术的条件，我也会告诉他所有技术产品用户都应该平等对待；
 3. 我会陪孩子一起处理，让他了解网络订单相关的知识。我会告诉孩子哪些是安全可信的购物站点，也会教他搜索和查找最合算的商品；
@@ -27,12 +15,11 @@ buying goods online. I will also help to explain how to search and find the best
 ### 儿童契约
 [Digital Citizenship网站中儿童协议](http://digitalcitizenship.net/uploads/KidPledge1.pdf)
 
-1. I will remember that not all people have access to or utilize technology in the same way. I will not treat others differently if they do not have the same options. 
-2. I will tell my parents or other responsible adult right away if I come across any information that makes me feel uncomfortable. I understand that to have technology rights that I have to be responsible in my actions as well. 
-3. I will tell my parents if I experience any pain or discomfort when using technology. I will remember that I need to balance technology use with other activities.  
+1. 我会牢记并非所有人都以同样的方式使用和利用技术，我不会因为他们有不同的使用方式而对他们的差异的对待。
+2. 遇到让我不适的信息时，我会立即告诉父母或其他负责的成年人，我理解我在享受使用技术的权利同时，也同时要对自己的行为负责。
+3. 当我在使用技术时感到身体疼痛或不适时，我会及时告诉我的父母，我牢记要要维持技术使用和参与其他活动之间的平衡。  
 4. I will not respond to any messages that are mean or in any way make me feel uncomfortable. It is not my fault if I get a message that is not appropriate. If I do I will tell my parents or responsible adult right away so that they can contact the proper groups. 
-5. I will talk with my parents so that we can set up rules for making purchases online. We will decide upon if and when online purchases can be m
-ade and secure sites for me to use.  
+5. I will talk with my parents so that we can set up rules for making purchases online. We will decide upon if and when online purchases can be made and secure sites for me to use.  
 6. I will treat others the way that I wish to be treated when using technology. I will keep in mind that my technology use affects others.
 7. I will check with my parents before downloading or installing software or doing anything that could possibly hurt our computer or jeopardize my family’s privacy. I will also keep programs such as anti-virus, spyware and adware up-to-date to protect our information. 
 8. I will be a good online citizen and not do anything that hurts other people or is against the law.  
@@ -55,5 +42,118 @@ ade and secure sites for me to use.
 
 * [Lynda数字公民课程](https://www.lynda.com/Classroom-Management-tutorials/Digital-Citizenship/440956-2.html)
 
+数字公民素养教育调查
+
+一、基本信息：
+
+1. 性别
+2. 年龄
+3. 学历
+4. 所在省份
+
+1. 执教学段
+2. 执教学科：
+3. 学校性质：城市、城镇、农村、其它
+4. 教龄：
+
+二、对于数字公民素养的理解
+
+1. 你知道“数字公民素养”指的是什么吗？
+	是＝》数字公民素养内容的选择题。
+	否
+	不确定
+2. 结合你现在对数字公民素养的理解，你觉得你的数字公民素养应该是
+2. 你是否有未成年的孩子？
+	是＝》作为父母，你对孩子使用互联网时最担心的是什么
+		选项：帐户安全、个人信息泄露、在线欺凌、形成有助于日后工作与学习的网络声誉、建立与他人沟通的积极态度、时间管理、不良信息侵害、病毒或木马、其它
+	否
+3. 你与学生谈论过安全上网的问题吗？
+	是＝》谈论了一些什么问题（如何与陌生人交流、不良的网络信息、同伴之间的欺凌、GPS等位置跟踪、个人隐私信息保护、创建积极的在线形象、网络沉溺现象、其它）
+	否
+	不适用
+4. 你的学生表达过他们在个人网络安全方面的困惑吗？
+	是
+	否
+5. 在你接触的以下年龄段的孩子中，他们是如何使用计算机（包括台式机、笔记本、平板电脑）的？
+	3-5 yrs			
+	6-9 yrs			
+	10-13 yrs			
+	14-18 yrs			
+	选项： 禁止使用，和家人共用的设备，单独配置的设备？
+6. 在你接触的以下年龄段的孩子中，他们是如何使用移动设备（包括功能手机和智能手机）的？
+	3-5 yrs			
+	6-9 yrs			
+	10-13 yrs			
+	14-18 yrs		
+	选项：禁止使用，和家人共用的设备，单独配置的设备？
+7. 就你所知，大多数学生在哪个年级段开始拥有网络帐户（QQ、电子邮件，包括学习平台）？
+	Pre-K-Kindergarte
+	1st-2nd grad
+	3rd-4th grad
+	5th-6th grad
+	7-8th grad
+	9-10th grad
+	11-12th grad
+	I don’t know
+	Other
+8. 你知道你的学生的网络帐户密码吗？
+	是
+	否
+	不适用
+9. 你的学生使用最多的网络服务是？（任选三项）
+	欣赏在线视频与音乐
+	参与在线聊天等社交工具
+	搜索信息
+	玩游戏
+	在线学习
+10. 你所在学校组织过针对学生网络信息安全方面的教育活动吗？
+	是
+	否
+	我不知道
+11. 你班上学生的父母对他们如何合理使用技术设备进行过指导吗？
+	是
+	否
+	我不知道
+12. 你班上学生的其他教师对他们合理使用技术设备进行过指导吗？
+	是
+	否
+	我不知道
+13. 你们学校的信息技术管理人员，有针对学生网络信息安全进行过专门的技术设置吗？
+	是
+	否
+	我不知道
+14. 在你班上，你会在教学活动中让学生使用计算机、网络等信息技术吗？
+	几乎每周使用
+	一学期不超过5次
+	否
+15. 你认为对学生进行数字公民素养教育是否重要？
+	非常重要
+	重要
+	一般
+	比较不重要
+	不重要
+16. 你觉得以下角色在中小学生数字公民素养教育中的作用如何？
+	家长
+	学科教师
+	学校技术管理人员
+17. 你觉得要提高儿童数字公民素养教育，以下哪些形式最有效？
+	成年人（家长、教师）的示范影响
+	专门的数字公民素养教育活动
+18. 就你内心而言，你希望给学生提供数字公民素养方面的教育和指导吗？
+	愿意
+	不愿意
+19. 在当前中小学生数字公民素养教育中，你认为存在哪些方面的障碍？
+	其它课程教学任务繁重
+	学校没有专门规划和预算
+	教师不具备数字公民素养教育的能力
+	家长不支持
+	学生不感兴趣
+	其它
+
+
+
+## http://digitalcitizenship.questionpro.com/a/TakeSurvey
+
 iNACOL在线学习标准：
 http://www.inacol.org/resources/resource-search/?resource_topics=16
+
