--- a/Collection_2016/2016.8_digital_citizenship_education.md
+++ b/Collection_2016/2016.8_digital_citizenship_education.md
@@ -1,31 +1,19 @@
+### 专题策划
 
-### 父母契约
-[Digital Citizenship网站中父母协议](http://digitalcitizenship.net/uploads/ParentContract.pdf)
+* 刊首语 
+	1P、阮高峰负责
+* 调查报告
+	3P、阮高峰负责问卷设计与实施，万璟、阮高峰合作联系各学科教师访谈。
+	小学语文：福建柯雅琴
+	中学物理：江苏王志
+	高中信息：浙江马建军
+	高校：张丽霞
+* 国外研究与实践现状
+	3P、阮高峰负责
+* 数字公民素养专题文章
+	3P、张立新负责
 
-1. 我会去了解我孩子使用的网络服务和站点，如果我不知道如何使用，我会花时间去学习。
-2. 我会告诉孩子并不是所有人都有同样使用技术的条件，我也会告诉他所有技术产品用户都应该平等对待；
-3. 我会陪孩子一起处理，让他了解网络订单相关的知识。我会告诉孩子哪些是安全可信的购物站点，也会教他搜索和查找最合算的商品；
-4. 我承诺会教孩子如何使用数字化通讯方式，我也理解技术并不一定总是最好的沟通方式；
-5. 我会让我们家庭中每个成员了解，我们的技术使用方式会影响其他人。我也会帮助孩子理解，如何对待他人，他人也会同样对待自己；
-6. 我会尝试像了解我孩子现实中的好友一样去了解我孩子的“在线好友”。我会解释在网络世界中要享受权利，必然也要同时承担义务；
-7. 我会告诉孩子有些网络材料受版权保护，未经允许不可获取。孩子需要理解有些材料是他人拥有的，并受保护的；
-8. 我会向孩子解释计算机等设备需要放置在适合他们身高的高度上，以避免生理伤害。我也会确保孩子使用技术的时间限制，避免他技术沉溺；
-9. 我会花时间教孩子避免病毒、木马和广告软件侵害设备和数据的方法，我也会向他展示这种保护对所有技术设备都是一样重要的。
-
-### 儿童契约
-[Digital Citizenship网站中儿童协议](http://digitalcitizenship.net/uploads/KidPledge1.pdf)
-
-1. 我会牢记并非所有人都以同样的方式使用和利用技术，我不会因为他们有不同的使用方式而对他们的差异的对待。
-2. 遇到让我不适的信息时，我会立即告诉父母或其他负责的成年人，我理解我在享受使用技术的权利同时，也同时要对自己的行为负责。
-3. 当我在使用技术时感到身体疼痛或不适时，我会及时告诉我的父母，我牢记要要维持技术使用和参与其他活动之间的平衡。  
-4. 我不会去回应那些刻薄的或是让我不舒服的信息，收到不适宜的信息并不是我的错。如果我回复了，我会立即告诉我的父母和监管的成年人，这样他们就可以和特定的机构联系。
-5. 网络购物时我会和父母一起操作，这样我们可以设定购物的规则。我们会确定网络购物站点是否安全可用，以及购物时机是否合适。
-6. I will treat others the way that I wish to be treated when using technology. I will keep in mind that my technology use affects others.
-7. I will check with my parents before downloading or installing software or doing anything that could possibly hurt our computer or jeopardize my family’s privacy. I will also keep programs such as anti-virus, spyware and adware up-to-date to protect our information. 
-8. I will be a good online citizen and not do anything that hurts other people or is against the law.  
-9. I will help my parents understand how to have fun and learn things online and teach them things about the Internet, computers and other technology. 
-
-#### 中译
+#### 数字公民素养专题资源
 
 * [Common Sense的Digital Citizenship Education教材：](https://www.commonsensemedia.org/educators/digital-citizenship)
 * [一个关于数字公民素养的文摘汇总](http://learntech.ties.k12.mn.us/Digital_Citizenship.html)
@@ -41,200 +29,8 @@
 * [Essential elements of digital citizenship](https://www.iste.org/explore/articleDetail?articleid=101&category=ISTE-Connects-blog&article=Essential-elements-of-digital-citizenship)
 * [Lynda数字公民课程](https://www.lynda.com/Classroom-Management-tutorials/Digital-Citizenship/440956-2.html)
 
-### 数字公民素养教育调查
 
-##### 一、基本信息：
-
-1. 性别
-	男
-	女
-2. 年龄
-	年龄的划分选项
-3. 学历
-	大专
-	本科
-	硕士研究生
-4. 所在省份：填空也可
-1. 执教学段
-	幼儿园
-	小学
-	初中
-	高中
-2. 执教学科：
-	语文
-	数学
-	英语
-	物理
-	化学
-	生物
-	地理
-	历史
-	科学
-	信息技术
-	美术
-	音乐
-	思想品德
-	劳动
-	综合实践
-	体育
-3. 学校性质
-	城市
-	城镇
-	农村
-	其它
-4. 教龄：
-	5年以下
-	5到10年
-	11到15年
-	16到20年
-	20年以上
-
-
-##### 二、对于数字公民素养的理解
-
-1. 在参加本问卷前，你知道“数字公民素养”指的是什么吗？
-	是＝》数字公民素养内容的选择题。
-	否
-	不确定
-2. 结合你现在对数字公民素养的理解，你觉得数字公民素养教育应该包括以下哪些方面？
-	有理性有尺度地使用技术，避免沉溺和身心损伤
-	网络上确保安全，避免不良信息与坏人伤害
-	理性沟通，尊重他人
-	尊重版权
-2. 你是否有未成年的孩子？
-	是＝》作为父母，你对孩子使用互联网时最担心的是什么
-		选项：
-		帐户安全
-		个人信息泄露
-		在线欺凌
-		形成有助于日后工作与学习的网络声誉
-		建立与他人沟通的积极态度
-		时间管理
-		不良信息侵害
-		病毒或木马
-		其它
-	否
-3. 你与学生谈论过安全上网的问题吗？
-	是＝》谈论了一些什么问题
-		如何与陌生人交流
-		不良的网络信息
-		同伴之间的欺凌
-		GPS等位置跟踪
-		个人隐私信息保护
-		创建积极的在线形象
-		网络沉溺现象
-		其它
-	否
-	不适用
-4. 你的学生表达过他们在个人网络安全方面的困惑吗？
-	是
-	否
-5. 在你接触的以下年龄段的孩子中，他们是如何使用计算机（包括台式机、笔记本、平板电脑）的？
-	3-5 岁			
-	6-9 岁			
-	10-13 岁			
-	14-18 岁			
-	选项： 禁止使用，和家人共用的设备，单独配置的设备？
-6. 在你接触的以下年龄段的孩子中，他们是如何使用移动设备（包括功能手机和智能手机）的？
-	3-5 岁			
-	6-9 岁			
-	10-13 岁			
-	14-18 岁		
-	选项：禁止使用，和家人共用的设备，单独配置的设备？
-7. 就你所知，大多数学生在哪个年级段开始拥有网络帐户（QQ、电子邮件，包括学习平台）？
-	幼儿园
-	1-2年级
-	3-4年级
-	5-6年级
-	7-8年级
-	9-10年级
-	11-12年级
-	我不知道
-	其它
-8. 你知道你的学生的网络帐户密码吗？
-	是
-	否
-	不适用
-9. 你的学生使用最多的网络服务是？（任选三项）
-	欣赏在线视频与音乐
-	参与在线聊天等社交工具
-	搜索信息
-	玩游戏
-	在线学习
-
-15. 你认为对学生进行数字公民素养教育是否重要？
-	非常重要
-	重要
-	一般
-	比较不重要
-	不重要
-18. 就你内心而言，你希望给学生提供数字公民素养方面的教育和指导吗？
-	愿意
-	不愿意
-
-
-##### 学校数字公民素养教育
-
-1. 教师教学活动中的教育【李克特量表系列题，维度（1-5）】
-	在教学中，我经常设计活动让学生使用不联网的计算机学习。
-	在教学中，我经常设计活动让学生通过互联网来学习。
-	总体上，我对每位学生的数字公民素养有清晰的把握。
-	在学生使用技术设备学习之前，会对相关技能进行教育。
-	在学生使用网络学习之前，会教区分网站安全、可信方面的示范。
-	学生使用网络之前，会对他们进行网络沟通礼仪的教育。
-	在学生使用网络之前，会教保护个人信息的方法。
-	在学生使用技术设备学习过程中，对学生进行监控与指导。
-	在学生使用网络的过程，我要求他们遇到不良的信息或行为时，要及时向我汇报。
-
-10. 你所在学校组织过针对学生网络信息安全方面的教育活动吗？
-	是
-	否
-	我不知道
-13. 你们学校的信息技术管理人员，有针对学生网络信息安全进行过专门的技术设置吗？
-	是
-	否
-	我不知道
-11. 你班上学生的其他任课教师对他们如何合理使用技术设备进行过指导吗？
-	是
-	否
-	我不知道
-12. 你班上学生的父母对他们合理使用技术设备进行过指导吗？
-	是
-	否
-	我不知道
-
-
-
-16. 你觉得以下角色在中小学生数字公民素养教育中的作用如何？【李克特，1-5】
-	家长
-	学科教师
-	学校技术管理人员
-	还有谁？
-
-17. 你觉得要提高儿童数字公民素养教育，以下哪些形式最有效？【李克特，1-5】
-	成年人（家长、教师）的示范影响
-	专门的数字公民素养教育活动
-	还有哪些？请想想
-
-##### 建议
-
-
-
-19. 在当前中小学生数字公民素养教育中，你认为存在哪些方面的障碍？
-	其它课程教学任务繁重
-	学校没有专门规划和预算
-	教师不具备数字公民素养教育的能力
-	家长不支持
-	学生不感兴趣
-	其它
-20. 对于中小学数字公民素养的教育，您有什么建议或想法？ 【填空】
-
-
-
-
-
-
-## http://digitalcitizenship.questionpro.com/a/TakeSurvey
+http://digitalcitizenship.questionpro.com/a/TakeSurvey
 
 iNACOL在线学习标准：
 http://www.inacol.org/resources/resource-search/?resource_topics=16
