resources on DCE added

--- a/Collection_2016/2016.8_digital_citizenship_education.md
+++ b/Collection_2016/2016.8_digital_citizenship_education.md
@@ -2,16 +2,30 @@
 
 * 刊首语 
 	1P、阮高峰负责
-* 调查报告
-	3P、阮高峰负责问卷设计与实施，万璟、阮高峰合作联系各学科教师访谈。
-	小学语文：福建柯雅琴
-	中学物理：江苏王志
-	高中信息：浙江马建军
-	高校：张丽霞
-* 国外研究与实践现状
-	3P、阮高峰负责
-* 数字公民素养专题文章
-	3P、张立新负责
+
+* 第一部分（3-4p）：总论篇
+	数字公民素养概念演变的背景、数字公民素养的内容、国际数字公民素养教育概况等。
+	张立新教授撰写，字数4200-5600字。
+
+* 第二部分（4p）：畅聊篇
+	根据阮高峰的网络调研结果及其分析（7月底交），邀请小学、中学、大学的各学科教师来聊聊各自心中的数字公民素养。
+	（每人400字以内，版式活跃）。
+	阮高峰、万璟组织。
+	小学语文：福建柯雅琴。 重点结合小学生数字公民素养现状学校和教师应该如何做教育和引导，突出信息技术高度普及，很多孩子在入学前就已经接触技术装备的情况下，这是一种趋势。
+	中学物理：江苏王志。 结合中学生数字公民素养现状，谈谈学校和教师如何面对和解决这一问题。同时以孩子父母的身份，谈一下对于家庭教育中的引导与教育的问题。
+	高中信息：浙江马建军。 从信息技术教研员的角度，谈一下信息技术教师以及学校信息技术专业管理人员，在学生数字公民素养方面应该发挥什么作用？也请顺便谈谈对数字公民素养教育，教师培训应该重视的问题。
+	高校：张丽霞 。从高校教师的角度来谈谈大学生的数字公民素养现状，同时从师范院校的角度来说，对于培养未来具备数字公民素养教育能力的师资的一些建议。也可自由发挥。	
+
+* 第三部分（3p）：经验篇
+	（1）美国数字公民素养教育现状及启示（美国数字公民素养教育的演变、美国数字公民素养核心标准及应用、对中国数字公民素养教育的启示等）。
+	Leaunda Hemphill教授撰写，字数4200字左右。
+
+
+写作要求： 
+1、语言应生动、流畅，最好能有数据、实例支撑，但切忌写成论文格式（不要摘要、关键词，可以保留参考文献）。 
+2、文中可适当配图说明。 
+3、专题回稿时间：2016年8月30日。 
+注：如有其他想法，可做补充。 
 
 #### 数字公民素养专题资源
 
