dce survey result submited

--- a/Collection_2016/2016.8_digital_citizenship_education.md
+++ b/Collection_2016/2016.8_digital_citizenship_education.md
@@ -42,10 +42,11 @@
 * [The Strategy for Digital Citizenship](http://www.nais.org/Magazines-Newsletters/ISMagazine/Pages/The-Strategy-for-Digital-Citizenship.aspx)
 * [Essential elements of digital citizenship](https://www.iste.org/explore/articleDetail?articleid=101&category=ISTE-Connects-blog&article=Essential-elements-of-digital-citizenship)
 * [Lynda数字公民课程](https://www.lynda.com/Classroom-Management-tutorials/Digital-Citizenship/440956-2.html)
+* [一份国外数字公民素养教育调研](http://digitalcitizenship.questionpro.com/a/TakeSurvey)
 
 
-http://digitalcitizenship.questionpro.com/a/TakeSurvey
+#### 网络教学质量评估相关资料
+[iNACOL在线学习标准：](http://www.inacol.org/resources/resource-search/?resource_topics=16)
 
-iNACOL在线学习标准：
-http://www.inacol.org/resources/resource-search/?resource_topics=16
+
 
